Bug 565459 - Use Charset aware URL encode/decode methods
Handle the rest of platform.ua.

Change-Id: I9b4ee7e42c1c211c29adec37bdce5479ad0bf665
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>